--- a/mainwar/pom.xml
+++ b/mainwar/pom.xml
@@ -217,6 +217,18 @@
             <version>0.9.9-RC1</version>
         </dependency>
 
+        <!-- In memory DB for testing -->
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>2.2.9</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+            <version>1.4</version>
+        </dependency>
+
     </dependencies>
 
     <build>
