--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
@@ -28,8 +28,7 @@ FinancePostingStatus.DRAFT
 FinancePostingStatus.BOOKED
 
 FinanceAccountType.PROFIT=Profit
-FinanceAccountType.LOSS=Expense
+FinanceAccountType.EXPENSE=Expense
 FinanceAccountType.ASSET=Asset
 FinanceAccountType.LIABILITY=Liability
-
 
