--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -25,7 +25,9 @@ Country.DK=Danmark
 MoneyCurrency.DKK=DKK
 
 FinanceAccountType.PROFIT=Indt\u00E6gt
-FinanceAccountType.LOSS=Udgift
+FinanceAccountType.EXPENSE=Udgift
 FinanceAccountType.ASSET=Aktiv
 FinanceAccountType.LIABILITY=Passiv
+
+
 
