--- a/mainwar/pom.xml
+++ b/mainwar/pom.xml
@@ -273,6 +273,11 @@
             <artifactId>commons-dbcp</artifactId>
             <version>1.4</version>
         </dependency>
+        <dependency>
+            <groupId>hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>1.8.0.7</version>
+        </dependency>
 
     </dependencies>
 
